<resources>
    <string name="app_name">Aula06</string>
    <string name="search">Pesquisar</string>
    <string name="create">Criar</string>
    <string name="nome">Nome</string>
    <string name="localizacao">Localização</string>
    <string name="descricao">Descrição</string>
    <string name="go_to_maps">Go To Maps</string>
    <string name="go_to_web">Go To WEB</string>
    <string name="go_to_camera">Go To Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
