<!-- TODO (1) Copiar layout de activity node-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".NodeInfoFragment">

    <TextView
            android:id="@+id/node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
            android:id="@+id/node_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizacao"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
            android:id="@+id/node_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
            android:id="@+id/button_go_to_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_maps" />

    <Button
            android:id="@+id/button_go_to_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_web" />

    <Button
            android:id="@+id/button_go_to_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_camera" />

</LinearLayout>
